--- a/website/docs/intro.mdx
+++ b/website/docs/intro.mdx
@@ -44,16 +44,9 @@ Para começar a utilizar o JS SDK, instale-o no seu projeto:
 Depois de instalado, você precisa configurar qual área de trabalho deve ser utilizada para requisitar dados. Saiba mais
 na [página sobre o Cliente](./client#configurando-o-cliente-global) desse guia.
 
-## Configuração
-
-Antes de começar a utilizar o JS SDK, você precisa configurar qual área de trabalho deve ser utilizada para requisitar
-dados. Para
-
 ## TypeScript
 
 O JS SDK é escrito em TypeScript e "tipa" corretamente todos os seus métodos, o que é útil mesmo que você use JavaScript
 comum na sua aplicação, já que sua IDE pode usar esses tipos para lhe ajudar no desenvolvimento.
 
-Além disso, o SDK provê uma maneira simples de criar tipos para os dados dos *modelos* e *singletons* da sua *área de trabalho*.
-
-Para saber mais, consulte a página sobre TypeScript desse guia.
+Todos os tipos exportados pelo JS SDK são detalhados na seção API.
