--- a/website/docs/requesting-data/singletons.mdx
+++ b/website/docs/requesting-data/singletons.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 3
 ---
 
-# Modelos
+# Singletons
 
 Modelos são objetos do Starlight que definem um tipo de dado específico que pode se repetir, como posts de um blog,
 revistas, pessoas, eventos, modelos de carro, etc. Instâncias de um modelo são chamadas de Entradas. Depois de criadas,
