--- a/website/docs/intro.mdx
+++ b/website/docs/intro.mdx
@@ -42,11 +42,11 @@ Para começar a utilizar o JS SDK, instale-o no seu projeto:
 </Tabs>
 
 Depois de instalado, você precisa configurar qual área de trabalho deve ser utilizada para requisitar dados. Saiba mais
-na [página sobre o Cliente](./client#configurando-o-cliente-global) desse guia.
+na [página sobre o Cliente](./client#configuring-the-global-client) desse guia.
 
 ## TypeScript
 
-O JS SDK é escrito em TypeScript e "tipa" corretamente todos os seus métodos, o que é útil mesmo que você use JavaScript
-comum na sua aplicação, já que sua IDE pode usar esses tipos para lhe ajudar no desenvolvimento.
+O JS SDK é escrito em TypeScript e "tipa" corretamente a maioria dos seus métodos, o que é útil mesmo que você use
+JavaScript comum na sua aplicação, já que sua IDE pode usar esses tipos para lhe ajudar no desenvolvimento.
 
-Todos os tipos exportados pelo JS SDK são detalhados na seção API.
+Todos os tipos exportados pelo JS SDK são detalhados na [seção da API](/api) desse site.
