--- a/website/docs/requesting-data/singletons.mdx
+++ b/website/docs/requesting-data/singletons.mdx
@@ -4,6 +4,33 @@ sidebar_position: 3
 
 # Singletons
 
-Modelos são objetos do Starlight que definem um tipo de dado específico que pode se repetir, como posts de um blog,
-revistas, pessoas, eventos, modelos de carro, etc. Instâncias de um modelo são chamadas de Entradas. Depois de criadas,
-Entradas podem ser associadas a Categorias.
+Você pode requisitar *singletons* facilmente utilizando um [SingletonSelector](/api/interface/SingletonSelector). Os
+métodos desse Selector retornam objetos do tipo [Singleton](/api/interface/Singleton).
+
+## SingletonSelector
+
+<APILink to="/api/interface/SingletonSelector"/>
+
+SingletonSelectors são utilizados para listar e requisitar *singletons* específicos
+dentro de uma *área de trabalho*. Para usar um SingletonSelector, basta acessar
+a propriedade `singletons` de um cliente do SDK:
+
+```js
+import Starlight from '@starlightcms/js-sdk'
+
+// A propriedade singletons é um SingletonSelector
+const modelSelector = Starlight.singletons
+```
+
+Em geral, você não precisa utilizar um SingletonSelector como no exemplo acima. Você pode simplesmente encadear seus
+métodos para requisitar o que você precisa. Por exemplo:
+
+```js
+import Starlight from '@starlightcms/js-sdk'
+
+// Listar todos os singletons da área de trabalho
+const response = await Starlight.singletons.list()
+
+// Requisitar os dados de um singleton específico
+const response = await Starlight.singletons.get('home')
+```
